--- a/src/css/default.css
+++ b/src/css/default.css
@@ -5,154 +5,65 @@ ul,ol{ list-style:none;}
 a{color:inherit; text-decoration:none;}
 input{font:inherit;}
 
-body{
-    font-size:12px;
-    line-height:1.5;
-}
+body{ font-size:12px; line-height:1.5;}
 
 /*layout*/
-.page{ display:flex; height:100vh;}
+.page{ height:100vh; width:100%;}
+.page > .title{
+    padding-left:1%; height:6%;background-color:darkred;color:white; font-size:24px; align-items:center;}
+.page > main { height:94%;}
+.page > main > aside{ margin:0 0.3%; float:left; width:10%; height:100%; display: flex; flex-direction: column;}
+.page > main > aside > .title { text-align: center;}
+.page > main > aside > button { flex-grow:1; margin:3% 0; border:2px dashed #ddd; background-color:white;}
+.page > main > aside > .uploadArea { text-align:center;}
+.page > main > aside > .uploadArea > .draggable{
+    text-align:center; padding:20px; border-radius:4px; border:2px dashed #ddd; display:flex;
+    align-items:center; justify-content:center; flex-direction: column; }
+.page > main > aside > .uploadArea > .clickable{ cursor:pointer;}
 
-.page > aside{ width:200px;}
+.page > main > .music { float:left; width:89%; }
+.page > main > .music > .title { width:100%; }
+.page > main > .music > .songList-container > table { width:100%;}
+.page > main > .music th { width:12.5%; border:1px solid blue;}
+.page > main > .music tr.active{ background:#d4d4d4;}
 
-.page > main{ flex-grow:1; padding-left:20px;}
-
-/*aside*/
-.page > aside{
-    display:flex;
-    flex-direction:column;
-}
-
- .newSong{
-     text-align:center;
-     padding:10px;
-}
-
- .newSong.active{
-     background:#d4d4d4;
- }
-
- #songList-container{
-     flex-grow:1;
- }
-
- .songList{
-     text-align:left;
-     border-top:1px solid #999;
- }
-
-.songList > li{
-    border-bottom:1px solid #ddd;
-    padding:10px;
-}
-
-.songList > li.active{
-    background:#d4d4d4;
-}
-
-.uploadArea{}
-
-.draggable{
-    text-align:center;
-    padding:20px;
-    border-radius:4px;
-    border:2px dashed #ddd;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    width:200px;
-    flex-direction: column;
-}
-
-.clickable{
-    cursor:pointer;
-}
-
-/*main*/
-.page > main{
-    background:#d4d4d4;
-}
-
-.form{
-    font-size:14px;
-}
-
-.form >.row{
-    margin:20px 0;
-    display:flex;
-}
-
-.form > .row > label{
-    width:4em;
-    display:flex;
-    justify-content: flex-end;
-    align-items:center;
-    text-align:right;
-    margin-right:5px;
-}
-
-.form > .row.actions{
-    margin-left:calc(4em + 5px);
-}
-
-.form input[type=text]{
-    padding:3px 8px;
-    border-radius:5px;
-    border: 1px solid #ddd;
-    height:30px;
-}
-
-.form input[type=button],
-.form input[type=submit],
-.form button{
-    height:30px;
-    padding-left: 10px;
-    padding-right: 10px;
-    border-radius: 5px;
-}
-
-.page > main{
-    padding-top:20px;
-}
-
-.page > main > .form{
-
-}
+/*songFormArea*/
+#songFormArea{ position:fixed;top:6%;left:0; background:rgba(0,0,0,0); width:100%; height:94%; z-index: 1;
+   visibility:hidden;}
+#songFormArea.show{ visibility: visible;}
+#songFormArea.hidden { visibility :hidden;}
+#songForm { margin-left:10.5%; width:89.5%; height:100%; text-align:center; border:5px solid cornflowerblue;
+    background-color:white;}
+#songForm > .form{ font-size:14px;}
+#songForm > .form > .row{ margin:10px 0; display:flex; }
+#songForm > .form > .row > label{ width:4em; display:flex; justify-content: flex-end;
+    align-items:center;text-align:right; margin-right:5px;}
+#songForm > .form > .row.actions{ margin-left:calc(14em + 5px);}
+#songForm > .form input[type=text]{ padding:3px 8px; border-radius:5px; border: 1px solid #ddd; height:30px; }
+#songForm > .form input[type=button], .form input[type=submit], .form button{
+    height:30px; padding-left: 10px; padding-right: 10px; border-radius: 5px; margin-left:5px;}
 
 /***loading*/
 @keyframes loading{
-    0%{
-        transform:scale(1.0)
-    }
-    100%{
-        transform:scale(0.1)
-    }
+    0%{ transform:scale(1.0)}
+    100%{ transform:scale(0.1)}
 }
-.site-loading{
-    visibility:hidden;
-    position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    z-index:1;
-    background:rgba(0,0,0,0.2);
-    pointer-events:none;
-}
-.site-loading.active{
-    visibility: visible;
-}
-.site-loading::before{
-    content:'';
-    display:block;
-    width:100px;
-    height:100px;
-    background:green;
-    position:absolute;
-    top:50%;
-    left:50%;
-    margin-top:-50px;
-    margin-left:-50px;
-    border-radius:50%;
+.site-loading{ visibility:hidden; position:fixed; top:0; left:0; width:100%; height:100%; z-index:1;
+    background:rgba(0,0,0,0.2); pointer-events:none; }
+.site-loading.show{ visibility: visible; }
+.site-loading::before{ content:''; display:block; width:100px; height:100px; background:green;
+    position:absolute; top:50%; left:50%; margin-top:-50px; margin-left:-50px; border-radius:50%;
     animation:loading 1s infinite alternate-reverse;
 }
+
+
+
+/*.newSong{ text-align:center; padding:10px;}*/
+/*.newSong.active{ background:#d4d4d4;}*/
+/*.songList{  text-align:left; border-top:1px solid #999;}*/
+/*.songList > li{ border-bottom:1px solid #ddd; padding:10px;}*/
+
+/*!*main*!*/
+/*.page > main{ background:#d4d4d4; }*/
+
+
